--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@electric-sql/pglite-repl": "^0.2.32",
     "@hookform/resolvers": "^3.9.1",
     "@makisuo/pglite-drizzle": "npm:@jsr/makisuo__pglite-drizzle@^0.0.14",
-    "@mcp-b/embedded-agent": "^0.0.6",
+    "@mcp-b/embedded-agent": "0.0.7-beta.6",
     "@mcp-b/global": "^1.1.2",
     "@mcp-b/react-webmcp": "^0.1.5",
     "@mcp-b/transports": "^1.1.1",
