--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
+    "@types/leaflet": "^1.9.21",
     "@uiw/codemirror-theme-github": "^4.25.2",
     "@uiw/codemirror-theme-xcode": "^4.25.2",
     "@uiw/codemirror-themes": "^4.25.2",
@@ -85,6 +86,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "d3": "^7.9.0",
     "dagre": "^0.8.5",
     "date-fns": "^4.1.0",
     "dexie-react-hooks": "^4.2.0",
@@ -98,6 +100,7 @@
     "hast-util-to-jsx-runtime": "^2.3.6",
     "hono": "4.8.2",
     "input-otp": "^1.4.2",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.23.22",
@@ -110,9 +113,11 @@
     "react-dropzone": "^14.3.8",
     "react-force-graph-3d": "^1.29.0",
     "react-hook-form": "^7.64.0",
+    "react-leaflet": "5.0.0",
     "react-resizable-panels": "^3.0.6",
     "react-syntax-highlighter": "^15.6.6",
     "recharts": "2.15.4",
+    "simple-statistics": "^7.8.8",
     "simplex-noise": "^4.0.3",
     "sonner": "^2.0.7",
     "sql-formatter": "^15.6.10",
@@ -133,6 +138,7 @@
     "@sentry/vite-plugin": "^4.6.1",
     "@tailwindcss/typography": "^0.5.19",
     "@tanstack/router-plugin": "^1.132.37",
+    "@types/d3": "^7.4.3",
     "@types/dagre": "^0.7.53",
     "@types/hast": "^3.0.4",
     "@types/node": "24.0.4",
