--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "@tanstack/router-plugin": "^1.132.37",
     "@types/d3": "^7.4.3",
     "@types/dagre": "^0.7.53",
+    "@types/geojson": "^7946.0.16",
     "@types/hast": "^3.0.4",
     "@types/node": "24.0.4",
     "@types/react": "^19.1.0",
